Closed Bug 39717 Opened 24 years ago Closed 24 years ago

Disk cache directory not being recreated after it's deleted

Categories

(Core :: Networking: Cache, defect, P3)

x86
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: cks+mozilla, Assigned: neeti)

References

Details

(Whiteboard: [nsbeta2+] fix in hand)

Build ID: 2000051720 (and current CVS pull, too) If you delete the Mozilla disk cache directory (which is normally in $HOME/.mozilla/<profile>/Cache), perhaps as the brutal and fast Unix way of cleaning it out, Mozilla will not recreate it. As a side effect, Mozilla stops using a disk cache. Reproduction is 100% for me. Reproduction: - cd to your profile's directory ('cd $HOME/.mozilla/*/.' may work) - delete the disk cache with 'rm -rf Cache'. - start Mozilla, browse around, exit. - verify that the Cache directory has not reappeared and thus you are not using a disk cache.
It's being recreated fine on my may 11th linux build.
I am running Mozilla build 2000060409 on Linux right now. I'm getting this same bug. I'm not sure when the Cache appears at all. I'm moving this to New.
Status: UNCONFIRMED → NEW
Ever confirmed: true
*** Bug 40235 has been marked as a duplicate of this bug. ***
Nominating for nsbeta2
Assignee: gordon → neeti
Keywords: nsbeta2
Target Milestone: --- → M17
Putting on [nsbeta2-] radar. Will release note for beta2 not to do this :-)
Whiteboard: [nsbeta2-]
Status: NEW → ASSIGNED
*** Bug 42856 has been marked as a duplicate of this bug. ***
I propose this should be reassessed. Removing the cache directory to clean out the cache is a common enough process. Plus we have the fix in hand. Clearing minus for reeval.
Whiteboard: [nsbeta2-] → fix in hand
Putting on [nsbeta2+] radar for beta2 fix.
Whiteboard: fix in hand → [nsbeta2+] fix in hand
Checked in a fix
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
verified: Linux 2000071008
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.