fix for bug 39717 - Disk cache directory not being recreated after it's deleted.r=gagan